# mlcf

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  cgrbi.py  main.py  main_ambroise.py  mainsatascript.py  parameters.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh  strategy_analysis.py
.github/workflows/: automatic-release.yml  create-release.yml  deploy-release.yml  lint-tests.yml  python-publish.yml
CGrbi/ai/: super_module.py  training_manager.py
CGrbi/aitools/: super_module.py  training_manager.py
CGrbi/commands/: __init__.py  build_dataset.py  launch_ml.py
CGrbi/datatools/: datasetools.py  indice.py  indices.py  preprocessing.py  utils.py  wtseries_tensor.py  wtseries_training.py
CGrbi/envtools/: logging.py  parameters.py  path.py  project.py
ai/: log.py  super_module.py  training_manager.py
ai/models/: ga.py  ga_select.py  lstm.py  mlp.py  mlp_GA.py
analyse/: analyse.py  plot_cours.py  test.py
build_helper/: libta.deb  ta.deb  talib-install.sh
ctbt/: __main__.py  parameters.ini
ctbt/aitools/: super_module.py  training_manager.py
ctbt/commands/: __init__.py  build_dataset.py  launch_ml.py
ctbt/datatools/: datasetools.py  preprocessing.py  utils.py  (+2 more)
dataset/: datatools.py  time_series.py  time_series_dataset.py  window_data.py
datatools/: preprocessing.py  utils.py  wtseries.py  wtseries_tensor.py  wtseries_training.py
docs/: autobuild.py  index.html  requirements.txt
envtools/: logging.py  project.py
ia/: Conv1D_features_select_test.py  GA_feature_selection.py  analyse.py  datatoolstest.py  kmeans.py  pca.py  utils.py
mlcf/: __init__.py  __main__.py  parameters.ini  utils.py
models/: GA_SELECT.py  LSTM.py  MLPGA.py  garch.py
scripts/: __init__.py  build_dataset.py  build_dataset_default.py
tests/: conftest.py
(+588 files in other folders)
