[metadata]
name = mlcf
version = attr: mlcf.__version__
author = Guitheg, Embraysite
author_email = gthgobin@gmail.com, costes.ambroise@gmail.com
description = MLCF - Machine Learning Toolkit for Cryptocurrency Forecasting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Guitheg/mlcf/tree/main
project_url = 
    Bug Tracker = https://github.com/Guitheg/mlcf/issues
license = GPLv3
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: 11.3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Desktop Environment :: File Managers
    Topic :: Education
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Intended Audience :: Developers
keywords = 
    finance
    machine-learning
    ai
    deep-learning
    time-series
    toolkit
    pytorch
    cryptocurrency
    neural-networks
    forecasting
    trading-algorithm
    investment
    trading-agent
    mlcf
    
[options]
packages = find:
include_package_data = True

tests_require = 
    pytest
    pytest-mock
    pytest-cov
    mypy
    flake8
python_requires = >=3.7

[options.entry_points]
console_scripts = 
    mlcf = mlcf.__main__:main

[flake8]
per-file-ignores = __init__.py:F401
max-line-length=100
exclude =
    .git,
    __pycache__,
    .eggs,
    user_data

[mypy]
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True